@@ -907,7 +907,8 @@ $_SESSION[$guid]['stringReplacement'] = array();
 																<optgroup label='--<?php echo __($guid, 'OTHERS') ?>--'/>
 																	<option value='BDT ó'>Bangladeshi Taka (ó)</option>
 																	<option value='BTC'>Bitcoin</option>
-																	<option value='XAF FCFA'>Central African Francs (FCFA)</option>
+                                                                    <option value='BGN лв.'>Bulgarian Lev (лв.)</option>
+                                        							<option value='XAF FCFA'>Central African Francs (FCFA)</option>
 																	<option value='EGP £'>Egyptian Pound (£)</option>
 																	<option value='GHS GH₵'>Ghanaian Cedi (GH₵)</option>
 																	<option value='INR ₹'>Indian Rupee (₹)</option>
