@@ -909,10 +909,11 @@ if (isActionAccessible($guid, $connection2, '/modules/System Admin/systemSetting
 						<optgroup label='--<?php echo __($guid, 'OTHERS') ?>--'/>
 							<option <?php if ($row['value'] == 'BDT ó') {echo 'selected';}?> value='BDT ó'>Bangladeshi Taka (ó)</option>
 							<option <?php if ($row['value'] == 'BTC') {echo 'selected';}?> value='BTC'>Bitcoin</option>
+                            <option <?php if ($row['value'] == 'BGN лв.') {echo 'selected';}?> value='BGN лв.'>Bulgarian Lev (лв.)</option>
 							<option <?php if ($row['value'] == 'XAF FCFA') {echo 'selected';}?> value='XAF FCFA'>Central African Francs (FCFA)</option>
           					<option <?php if ($row['value'] == 'EGP £') { echo 'selected' ; } ?> value='EGP £'>Egyptian Pound (£)</option>
 						  	<option <?php if ($row['value'] == 'GHS GH₵') { echo 'selected'; } ?> value='GHS GH₵'>Ghanaian Cedi (GH₵)</option>
-						  	<option <?php if ($row['value'] == 'INR ₹') {echo 'selected';}?> value='INR ₹'>Indian Rupee (₹)</option>
+						  	<option <?php if ($row['value'] == 'INR ₹') {echo 'selected';}?> value='INR ₹'>Indian Rupee₹ (₹)</option>
 							<option <?php if ($row['value'] == 'IDR Rp') {echo 'selected';}?> value='IDR Rp'>Indonesian Rupiah (Rp)</option>
 							<option <?php if ($row['value'] == 'JMD $') {echo 'selected';}?> value='JMD $'>Jamaican Dollar ($)</option>
 							<option <?php if ($row['value'] == 'KES KSh') {echo 'selected';}?> value='KES KSh'>Kenyan Shilling (KSh)</option>
